--- a/sitecompleto.html
+++ b/sitecompleto.html
@@ -17,13 +17,15 @@
         }
     </style>
 
-    <title>Olá, mundo!</title>
+    <title>Suculentas - cultive verde no seu lar!</title>
 </head>
 
 <body>
     <!-- Menu -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="assets/img/suculenta-icon.png" width="40" height="30" class="d-inline-block align-top" alt="Logo de suculenta">
+            Cultivee</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -32,31 +34,23 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+                    <a class="nav-link" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">SOBRE</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        ONDE ENCONTRAR
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Ação</a>
-                        <a class="dropdown-item" href="#">Outra ação</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Algo mais aqui</a>
+                        <a class="dropdown-item" href="https://www.jardimexotico.com.br/">Jardim Exótico</a>
+                        <a class="dropdown-item" href="https://www.gardensacoma.com.br/">Garden Sacomã</a>
+                        <a class="dropdown-item" href="https://www.paraisodassuculentas.com.br/">Paraíso das Suculentas</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Desativado</a>
-                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-            </form>
         </div>
     </nav>
     <!--/Menu-->
@@ -70,13 +64,14 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="img/suculents-1.jpg" alt="Mulher segurando vaso de suculenta">
+                <img class="d-block w-100" src="assets/img/suculents-1.jpg
+                " alt="Mulher segurando vaso de suculenta">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="img/suculents-2.jpg" alt="Vasos de suculenta">
+                <img class="d-block w-100" src="assets/img/suculents-2.jpg" alt="Vasos de suculenta">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="img/suculents-3.jpg" alt="Vasinhos de suculenta">
+                <img class="d-block w-100" src="assets/img/suculents-3.jpg" alt="Vasinhos de suculenta">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -91,10 +86,11 @@
     <!--/Carousel de slides-->
 
     <!--Jumbotron-->
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid bg-warning">
         <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">Este é um jumbotron modificado que ocupa todo o espaço horizontal de seu elemento pai.</p>
+            <h1 class="display-5">Suculentas: pequenas no tamanho, mas grandiosas na resistência</h1>
+            <p class="lead">O jardim de suculentas é tendência na decoração e sua presença pode transformar o ambiente da sua casa ou estabelecimento comercial. Seja estrutura em lindo jardins verticais, compondo belos arranjos em vasos, formando bordaduras ou forrando o solo do seu quintal não importa, as suculentas chegaram para ficar.</p>
+            <p class="lead">A composição de um jardim de suculentas encanta os olhos de quem vê, seja por meio da mistura de cores, texturas ou pela combinação com outras espécies.</p>
         </div>
     </div>
     <!--/Jumbotron-->
@@ -110,65 +106,48 @@
                         introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
                 </div>
             </div>
-            <div class="card p-3">
-                <blockquote class="blockquote mb-0 card-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">
-                        <small class="text-muted">
-                            Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
-                        </small>
-                    </footer>
-                </blockquote>
+            <div class="card">
+                <img class="card-img-top" src=".../100px160/" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
+                    <a href="https://www.jardimexotico.com.br/" class="btn btn-primary">Visitar</a>
+                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src=".../100px160/" alt="Imagem de capa do card">
                 <div class="card-body">
-                    <h5 class="card-title">Título do card</h5>
-                    <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a
-                        um conteúdo adicional.</p>
-                    <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
-                </div>
-            </div>
-            <div class="card bg-primary text-white text-center p-3">
-                <blockquote class="blockquote mb-0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-                    <footer class="blockquote-footer">
-                        <small>
-                            Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
-                        </small>
-                    </footer>
-                </blockquote>
-            </div>
-            <div class="card text-center">
-                <div class="card-body">
-                    <h5 class="card-title">Título do card</h5>
-                    <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a
-                        um conteúdo adicional.</p>
-                    <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img" src=".../100px260/" alt="Imagem do card">
-            </div>
-            <div class="card p-3 text-right">
-                <blockquote class="blockquote mb-0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">
-                        <small class="text-muted">
-                            Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
-                        </small>
-                    </footer>
-                </blockquote>
-            </div>
-            <div class="card">
+                <img class="card-img-top" src=".../100px160/" alt="Imagem de capa do card">
                 <div class="card-body">
-                    <h5 class="card-title">Título do card</h5>
-                    <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                        introdução a um conteúdo adicional. Este card tem o conteúdo ainda maior que o primeiro, para
-                        mostrar a altura igual, em ação.</p>
-                    <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
                 </div>
             </div>
+            <div class="card">
+                <img class="card-img-top" src=".../100px160/" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src=".../100px160/" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
+                </div>
+            </div>
+            
         </div>
         <!--/Cards-->
 
@@ -238,15 +217,15 @@
             <div class="row mb-3 mt-5">
                 <div class="col-md-12 d-flex justify-content-center">
                     <a href="https://www.facebook.com/" target="_blank" class="p-3">
-                        <img class="tm-social" src="./assets/img/facebook.png" alt="Logo do Facebook">
+                        <img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook">
                     </a>
 
                     <a href="https://www.instagram.com/" target="_blank" class="p-3">
-                        <img class="tm-social" src="./assets/img/instagram.png" alt="Logo do Instagram">
+                        <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
                     </a>
 
                     <a href="https://www.linkedin.com/" target="_blank" class="p-3">
-                        <img class="tm-social" src="./assets/img/linkedin.png" alt="Logo do Linkedin">
+                        <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin">
                     </a>
 
                 </div>
