--- a/sitecompleto.html
+++ b/sitecompleto.html
@@ -11,6 +11,9 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <style>
+        body {
+           background-color: #f1f2f6;
+        }
         .tm-social {
             width: 50px;
             height: 50px;
@@ -19,9 +22,34 @@
             border-radius: 10px;
         }
         .nav-item a:hover {
-            background-color: #1B5911;
-            border-radius: 0 10px;
+            background-color: #3CB371;
+            border-radius: 6px;
         }
+        .carousel-item {
+            background-size: contain;
+            height: 100vh;
+        }
+        .dropdown-menu {
+            border: none;            
+        }
+        @media (max-width: 575.98px) { 
+            .carousel-item {
+                height: 300px;
+            }
+            .border {
+                padding: 10px;
+            }
+            .jumbotron {
+                padding: 25px;
+            }
+            .nav-link {
+                text-align: center;
+            }
+            .dropdown-item {
+                text-align: center;
+            }
+        }
+
     </style>
 
     <title>Suculentas - Cultive verde no seu lar!</title>
@@ -59,9 +87,8 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">COMPRE O SEU E-BOOK</button>
-            </form>
+
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">COMPRE O SEU E-BOOK</button>      
         </div>
     </nav>
     <!--/Menu-->
@@ -199,7 +226,7 @@
                             placeholder="Digite uma mensagem, comentário ou uma sugestão"></textarea>
                     </div>
 
-                    <div class="form-group d-flex justify-content-end">
+                    <div class="form-group d-flex justify-content-start">
                         <button class="btn btn-outline-success">Enviar</button>
                     </div>
                 </form>
@@ -209,40 +236,39 @@
     </div>
     <!--Footer-->
     <footer class="bg-success">
-        <div class="row mt-5">
-            <div class="col-md-12 mt-5">
-                <h4 class="text-center text-white">Siga-nos nas redes sociais</h4>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-12 mt-5">
+                    <h4 class="text-center text-white">Siga-nos nas redes sociais</h4>
+                </div>
             </div>
-        </div>
-        <div class="row mb-3 mt-3">
-            <div class="col-md-12 d-flex justify-content-center">
+            <div class="row mb-3 mt-3">
+                <div class="col-md-12 d-flex justify-content-center">
 
-                <a href="https://www.facebook.com/" target="_blank" class="p-3">
-                    <img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook">
-                </a>
+                    <a href="https://www.facebook.com/" target="_blank" class="p-3">
+                        <img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook">
+                    </a>
 
-                <a href="https://www.instagram.com/" target="_blank" class="p-3">
-                    <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
-                </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="p-3">
+                        <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
+                    </a>
 
-                <a href="https://www.linkedin.com/" target="_blank" class="p-3">
-                    <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin">
-                </a>
+                    <a href="https://www.linkedin.com/" target="_blank" class="p-3">
+                        <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin">
+                    </a>
 
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p class="text-center font-italic">
-                    Todos os direitos reservados - Gabriela Gomes &copy;
-                </p>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center font-italic">
+                        Todos os direitos reservados - Gabriela Gomes &copy;
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
     <!--/Footer-->
-
-
-
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -255,5 +281,4 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
